services/tutorial-svc/k8/tutorial-svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tutorial-svc
  name: tutorial-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app: tutorial-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tutorial-svc
    version: v1
  name: tutorial-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tutorial-svc
      version: v1
  template:
    metadata:
      labels:
        app: tutorial-svc
        version: v1
    spec:
      serviceAccountName: tutorial-svc
      containers:
        - env:
            - name: "APP"
              valueFrom:
                fieldRef:
                  fieldPath: metadata.labels['app']
            - name: "VERSION"
              valueFrom:
                fieldRef:
                  fieldPath: metadata.labels['version']
            - name: "NAMESPACE"
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: registry.gitlab.com/brianmcginnis/tutorial-service:v1
          imagePullPolicy: IfNotPresent
          name: tutorial-svc
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          securityContext:
            privileged: false
