services/tutorial-svc/k8/tutorial-svc-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tutorial-svc-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - front-gateway
  http:
    - match:
        - uri:
            prefix: /api/tutorials
      route:
        - destination:
            host: tutorial-svc
      timeout: 6s
